# CXL_SWMC

./: .gitmodules  README.md
CPU_guest_VM/: README.md
CPU_guest_VM/kernel/: README.md
CPU_guest_VM/kernel/De_Stijl/famfs-linux/: config
CPU_guest_VM/kernel/De_Stijl/msg_layer_module/: Makefile  cxl_shm.c.backup  test_cxl_sender.c  test_cxl_sender.sh
CPU_guest_VM/kernel/De_Stijl/userspace_tool/: flush_all  flush_all.c  replication_daemon  replication_daemon.c
CPU_guest_VM/kernel/popcorn_2MB/: .gitignore
CPU_guest_VM/kernel/popcorn_2MB/famfs-linux/: MAINTAINERS  Makefile
CPU_guest_VM/kernel/popcorn_2MB/msg_layer_module/: README.md  README_TEST_SENDER.md  cxl_shm.c
CPU_guest_VM/kernel/popcorn_2MB/userspace_tool/: Makefile  page_coherence  page_coherence.c
CPU_guest_VM/vectorDB/: .gitignore  .gitmodules  README.md  figure_max_RPS.sh  mount_famfs.sh  setup_famfs.sh  start_cxlshm.sh  start_vectorDB.sh
CPU_guest_VM/vectorDB/KnowhereVectorDB/vectorDB/: CMakeLists.txt  CMakeLists.txt.backup  README.md  apache-arrow-apt-source-latest-jammy.deb  build.sh  build_vectorDB.sh  extract_pubmed_data.py  run.sh  test_server.sh
CPU_guest_VM/vectorDB/KnowhereVectorDB/vectorDB/src/: build_vectorDB.cpp  build_vectorDB_old.cpp  flat_index.cpp  flat_index.h  hnsw_index.cpp  hnsw_index.h  main.cpp  vector_db.cpp  vector_db.h  vector_db_server.cpp  vector_db_server.h
CPU_guest_VM/vectorDB/damo_yamls/: evict_test.yaml  replicate_all.yaml  replicate_all_24GB.yaml  replicate_all_48GB.yaml  replicate_all_72GB.yaml  replicate_all_96GB.yaml  replicate_and_evict.yaml  replicate_test.yaml  replicate_test_24GB.yaml  replicate_test_48GB.yaml  replicate_test_72GB.yaml  replicate_test_96GB.yaml
CPU_guest_VM/vectorDB/dax_test/: dax_test  dax_test.c
CPU_host_machine/: README.md
CPU_host_machine/ReqGen/: main.py  main_auto.py  main_writeadded.py  requirements.txt  run_reqgen.sh
CPU_host_machine/VM_setting/: VM_setting.sh  cxl_vm0.xml  cxl_vm0_24GB.xml  cxl_vm0_24GB_2MiB.xml  cxl_vm0_48GB.xml  cxl_vm0_48GB_2MB.xml  cxl_vm0_72GB.xml  cxl_vm0_72GB_2MiB.xml  cxl_vm0_8GB.xml  cxl_vm0_96GB.xml  cxl_vm0_96GB_2MiB.xml  cxl_vm1.xml  cxl_vm1_24GB.xml  cxl_vm1_24GB_2MB.xml  cxl_vm1_48GB.xml  cxl_vm1_48GB_2MB.xml  cxl_vm1_72GB.xml  cxl_vm1_72GB_2MB.xml  cxl_vm1_96GB.xml  cxl_vm1_96GB_2MB.xml  cxl_vmx_96GB_2MB.xml  default.xml  vm.xml
CPU_host_machine/VM_setting/cloudinit/: cxl_vm0.xml  meta-data.yaml  user-data.yaml
CPU_host_machine/dax_setting/: dax_test  dax_test.c
GPU/: .gitignore  README.md
GPU/LangChain/: async_custom_vectorstore.py  async_dataset_store.py  async_sqlite_store.py  build_sqlite.py  build_sqlite.sh  main.py  requirements.txt  run.sh  test.sh
GPU/TextEmbeddingsInference/: batch_100.json  run.sh  test_batch_100.py
GPU/vLLM/: Dockerfile  dummy_llm_server.py  requirements.txt  run_dummy_llm.sh  run_vllm.sh  test_dummy_llm.py  test_vllm.sh
(+80 files in other folders)
